--- a/java-react-webapp/src/main/webapp/index.html
+++ b/java-react-webapp/src/main/webapp/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>Grunt + React Sample</title>
+    <title>Grunt + Java + React Sample</title>
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script type="text/javascript" src="bundle.js"></script>
 </head>
 
 <body>
-    <div id="content">
+    <div id="content" class="container">
         <!-- Content goes here -->
     </div>
 </body>
