--- a/java-react-webapp/src/main/webapp/index.html
+++ b/java-react-webapp/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <title>Grunt + Java + React Sample</title>
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <script type="text/javascript" src="bundle.js"></script>
 </head>
 
